tests/limit_deployment_replica/deployment_staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    env: staging
  name: web
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
